--- a/irods_browser_app/templates/irods_upload_create.html
+++ b/irods_browser_app/templates/irods_upload_create.html
@@ -12,6 +12,7 @@
             <div class="modal-body">
               {% csrf_token %}
               <input type="hidden" name="store" id="root_store" value=""/>
+              <input type="hidden" name="res_type" id="res_type" value=""/>
               <input type="hidden" name="upload" id="upload_store" value=""/>
                 <div id="irods_structure">
                     <div id="viewing">Viewing : <input type="text" id="irods_view_store" ></div>
