--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -48,10 +48,10 @@
                 <option value="TimeSeriesResource">Time Series</option>
 {#                <option value="InstResource">RHESSys Instance Resource</option> #}
                 <option value="RefTimeSeries">HIS Referenced Time Series</option>
-{#                <option value="ModelInstanceResource">Model Instance Resource</option>#}
+                <option value="ModelInstanceResource">Model Instance Resource</option>
                 <option value="NetcdfResource">Multidimensional (NetCDF)</option>
-{#                <option value="ModelProgramResource">Model Program Resource</option>#}
-{#                <option value="ToolResource">Tool Resource</option>#}
+                <option value="ModelProgramResource">Model Program Resource</option>
+                <option value="ToolResource">Tool Resource</option>
             </select>
         </div>
     </div>
