--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -77,6 +77,12 @@
                 <td><a id="btn-signin-irods"  type="button" class="btn btn-success" data-toggle="modal" data-target="#irodsSignin">
                     <span class="glyphicon glyphicon-plus"><span class="button-label">Sign in iRODS...</span></span></a>
                 <span id="sign-in-info"></span>
+                <input type="hidden" id="irods-username" name="irods-username" value="">
+                <input type="hidden" id="irods-password" name="irods-password" value="">
+                <input type="hidden" id="irods-host" name="irods-host" value="">
+                <input type="hidden" id="irods-port" name="irods-port" value="">
+                <input type="hidden" id="irods-zone" name="irods-zone" value="">
+                <input type="hidden" id="irods_file_name" name="irods_file_name" value="">
                 <a id="btn-select-irods-file"  type="button" class="btn btn-success" data-toggle="modal" data-target="#irodsContent" style="display:none;">
                     <span class="glyphicon glyphicon-plus"><span class="button-label">Browse iRODS...</span></span></a>
                 <span id="irods-sel-file"></span>
