--- a/irods_browser_app/templates/irods_signin.html
+++ b/irods_browser_app/templates/irods_signin.html
@@ -12,23 +12,23 @@
                         <input type="hidden" name="path" value="{{ request.path }}"/>
                         <div class="form-group">
                             <label for="id_username" class="sr-only">Username: </label>
-                            <input id="username" class="form-control" name="username" placeholder="Username" value={% if request.session.user %}{{request.session.user}}{% else %}""{% endif %} type="text" />
+                            <input id="username" class="form-control" name="username" placeholder="Username" value="" type="text" />
                         </div>
                         <div class="form-group">
                             <label for="id_password" class="sr-only">Password:</label>
-                            <input id="password" class="form-control" name="password" placeholder="Password" value={% if request.session.password %}{{request.session.password}}{% else %}""{% endif %} type="password" />
+                            <input id="password" class="form-control" name="password" placeholder="Password" value="" type="password" />
                         </div>
                         <div class="form-group">
                             <label for="id_port" class="sr-only">Port:</label>
-                            <input id="port" class="form-control" name="port" placeholder="Port" value="1247" type="text" />
+                            <input id="port" class="form-control" name="port" placeholder="port" value="1247" type="text" />
                         </div>
                         <div class="form-group">
                             <label for="id_host" class="sr-only">Host:</label>
-                            <input id="host" class="form-control" name="host" placeholder="Host" value={% if request.session.host %}{{request.session.host}}{% else %}""{% endif %} type="text" />
+                            <input id="host" class="form-control" name="host" placeholder="Host" value="" type="text" />
                         </div>
                         <div class="form-group">
                             <label for="id_zone" class="sr-only">Zone:</label>
-                            <input id="zone" class="form-control" name="zone" placeholder="Zone" value={% if request.session.zone %}{{request.session.zone}}{% else %}""{% endif %} type="text" />
+                            <input id="zone" class="form-control" name="zone" placeholder="Zone" value="" type="text" />
                         </div>
                     </div>
                     <div class="modal-footer">
