--- a/irods_browser_app/templates/irods_signin.html
+++ b/irods_browser_app/templates/irods_signin.html
@@ -11,23 +11,23 @@
                         {% csrf_token %}
                         <input type="hidden" name="path" value="{{ request.path }}"/>
                         <div class="form-group">
-                            <label for="id_username" class="sr-only">Username: </label>
+                            <label for="id_username">Username: </label>
                             <input id="username" class="form-control" name="username" placeholder="Username" value="" type="text" />
                         </div>
                         <div class="form-group">
-                            <label for="id_password" class="sr-only">Password:</label>
+                            <label for="id_password">Password:</label>
                             <input id="password" class="form-control" name="password" placeholder="Password" value="" type="password" />
                         </div>
                         <div class="form-group">
-                            <label for="id_port" class="sr-only">Port:</label>
+                            <label for="id_port">Port:</label>
                             <input id="port" class="form-control" name="port" placeholder="port" value="1247" type="text" />
                         </div>
                         <div class="form-group">
-                            <label for="id_host" class="sr-only">Host:</label>
+                            <label for="id_host">Host:</label>
                             <input id="host" class="form-control" name="host" placeholder="Host" value="" type="text" />
                         </div>
                         <div class="form-group">
-                            <label for="id_zone" class="sr-only">Zone:</label>
+                            <label for="id_zone">Zone:</label>
                             <input id="zone" class="form-control" name="zone" placeholder="Zone" value="" type="text" />
                         </div>
                     </div>
