--- a/irods_browser_app/templates/irods_upload_add.html
+++ b/irods_browser_app/templates/irods_upload_add.html
@@ -6,14 +6,19 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <h4 class="modal-title" id="myModalLabel">iRODS user: <span id="irods_content_label">{{request.session.user}}</span> </h4>
+                    <h4 class="modal-title" id="myModalLabel">iRODS user: <span id="irods_content_label"></span> </h4>
                 </div>
                 <form class="form-signin" role="form" action="/irods/upload_add/" method="post">
                     <div class="modal-body">
                         {% csrf_token %}
-                        <input type="hidden" name="store" id="root_store" value="{{ request.session.datastore }}"/>
+                        <input type="hidden" name="store" id="root_store" value=""/>
                         <input type="hidden" name="res_id" id="res_id" value="{{ cm.short_id }}"/>
-                        <input type="hidden" name="upload" id="upload_store" value=""/>
+                        <input type="hidden" id="irods-username" name="irods-username" value="">
+                        <input type="hidden" id="irods-password" name="irods-password" value="">
+                        <input type="hidden" id="irods-host" name="irods-host" value="">
+                        <input type="hidden" id="irods-port" name="irods-port" value="">
+                        <input type="hidden" id="irods-zone" name="irods-zone" value="">
+                        <input type="hidden" name="irods_file_name" id="upload_store" value=""/>
                         <div id="irods_structure">
                             <div id="viewing">Viewing : <input type="text" id="irods_view_store" ></div>
                             <div id = "file_struct"></div>
