--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -681,19 +681,23 @@
                     {% endif %}
                     <!-- Buttons -->
                     {% for b in cm.bags.all %}
-                        <a id="btn-download-all" type="button" class="btn btn-default" href="{{ cm.bags.first.bag.url }}">
+                        <a
+                           id="btn-download-all" type="button" class="btn btn-default" href="{{ cm.bags.first.bag.url }}">
                             <span class="glyphicon glyphicon-download-alt">
-                                <span class="button-label">Download All ({{ b.bag.size|filesizeformat }})</span>
+                                <span title='Download All Content as Zipped BagIt Archive ({{ b.bag.size|filesizeformat }})' class="button-label">Download All Content as Zipped BagIt Archive ({{ b.bag.size|filesizeformat }})</span>
                             </span>
                         </a>
+
+
                     {% endfor %}
 
                     {% if page.perms.change %}
-                        <td><a id="btn-add-file" type="button" class="btn btn-success" data-toggle="modal" data-target="#add-file-dialog"
+                        <a id="btn-add-file" type="button" class="btn btn-success" data-toggle="modal" data-target="#add-file-dialog"
                                multiple="multiple">
                             <span class="glyphicon glyphicon-plus"><span class="button-label"> Add file...</span></span>
-                        </a></td>
+                        </a>
                     {% endif %}
+                    <div class="col-lg-12"><a href="#">Learn more about the Bagit archive format</a></div>
                 </div>
             </div>
 
