[#387] Minor fix on button background

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -17,7 +17,7 @@
                 {% else %}
                     <li><a href="/my-resources">Viewable by me</a></li>
                 {%  endif %}
-                <li><a class="btn btn-success" href="/hsapi/_internal/create-resource"><i class="fa fa-plus"></i> Create new</a></li>
+                <li><span><a class="btn btn-success" href="/hsapi/_internal/create-resource"><i class="fa fa-plus"></i> Create new</a></span></li>
             </ul>
         </div>
         <div class="col-lg-10" id="items">
