[#388] fix SWAT MIR page style

--- a/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
+++ b/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
@@ -195,6 +195,7 @@
                     {% endif %}
                 </div>
             </div>
+        </div>
     {%  endif %}
 {%  endblock %}
 {% block extra_js %}
