--- a/hs_modelinstance/templates/pages/modelinstanceresource.html
+++ b/hs_modelinstance/templates/pages/modelinstanceresource.html
@@ -39,7 +39,7 @@
                 {% endif %}
             </div>
             <div>
-                {% if executed_by.name %}
+                {% if executed_by.model_name %}
                     <h4><strong>Executed By:</strong></h4>
                     <hr style="margin-top: 0px;margin-bottom: 2px">
                     <div class="row">
